--- a/assets/scss/components/_search-form.scss
+++ b/assets/scss/components/_search-form.scss
@@ -8,6 +8,15 @@
       label {
         display: none;
       }
+
+      + .submit {
+        color: color(white);
+        background-color: color(blue-light);
+
+        .icon {
+          fill: color(white);
+        }
+      }
     }
   }
 
@@ -17,6 +26,11 @@
     position: absolute;
     color: color(gray-dark);
     transform: translateY(-50%);
+
+    @include media-xl {
+      left: 36px;
+      font-size: 36px;
+    }
   }
 
   input {
@@ -31,20 +45,50 @@
     &:focus {
       outline: none;
     }
+
+    @include media-xl {
+      font-size: 36px;
+      line-height: 72px;
+      border-radius: 36px;
+      padding: 0 168px 0 36px;
+    }
   }
 
   .submit {
     top: 50%;
-    right: 24px;
+    right: 6px;
+    width: 36px;
     padding: 4px;
+    height: 36px;
     cursor: pointer;
     position: absolute;
+    border-radius: 24px;
     @extend .button-reset;
     transform: translateY(-50%);
+    background-color: transparent;
     .icon {
       width: 14px;
       height: 14px;
       fill: color(blue-dark);
+    }
+
+    .text {
+      display: none;
+    }
+
+    @include media-xl {
+      width: auto;
+      right: 12px;
+      height: 48px;
+      padding: 0 24px;
+
+      .text {
+        display: inline-block;
+      }
+
+      .icon {
+        display: none;
+      }
     }
   }
 }
